# cplus_cplus_chess

./: CMakeLists.txt  Readme.md  main.cpp
assets/json/: board_pieces.json
code/: Game.cpp  Game.hpp
code/chess/: AssetsLoader.cpp  AssetsLoader.hpp  Board.cpp  Board.hpp  BoardLoader.cpp  BoardLoader.hpp  BoardRenderer.cpp  BoardRenderer.hpp  Cell.cpp  Cell.hpp  ChessGame.cpp  ChessGame.hpp  ChessRules.cpp  ChessRules.hpp  Definitions.hpp  GameController.cpp  GameController.hpp  MovementFactory.cpp  MovementFactory.hpp  Piece.cpp  Piece.hpp  PieceManager.cpp  PieceManager.hpp  PieceMover.cpp  PieceMover.hpp  Player.cpp  Player.hpp  TurnManager.cpp  TurnManager.hpp
code/core/: SDLImageInitializer.cpp  SDLInitializer.cpp  SDLInitializer.hpp  SDLMixerInitializer.cpp  SDLMixerInitializer.hpp  SDLTTFInitializer.cpp  SDLTTFInitializer.hpp
code/utils/: GameTimer.hpp  RectOperations.hpp  Renderer.hpp  TextManager.cpp  TextManager.hpp  TextureManager.cpp  TextureManager.hpp
code/utils/bar/: BarComponent.hpp  BarLogic.hpp  BarRenderer.hpp  IBarLogic.hpp
lib/pugixml/: pugiconfig.hpp  pugixml.cpp  pugixml.hpp
